--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
-    "multer": "*",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/joi": "^17.2.3"
+    "@types/joi": "^17.2.3",
+    "@types/multer": "^1.4.7"
   }
 }
