--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,7 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+backend/public/images/pets/*.png
+backend/public/images/pets/*.jpg
+backend/public/images/users/*.png
+backend/public/images/users/*.jpg
